<resources>
    <string name="app_name">遠端醫療照護系統</string>
    <string name="login">登陸</string>
    <string name="signUp">註冊</string>
    <string name="forgetpassword">忘記密碼</string>
    <string name="creatNewAccount">Creat New Account</string>
    <string name="alreadyHaveAccount">已經擁有帳戶</string>
    <string name="accountData">您的個人資料</string>
    <string name="yourName">使用者名稱</string>
    <string name="yourAccount">使用者帳戶</string>
    <string name="yourPassword">使用者密碼</string>
    <string name="yourPhone">使用者電話號碼</string>
    <string name="yourAddress">使用者地址</string>
    <string name="addDetailsTitle">修改使用者資料</string>
    <string name="yourRealId">使用者身份證字號</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
</resources>
