<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/profile_background"
    tools:context=".ui.UserFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="88dp"
                android:orientation="horizontal">

                <FrameLayout
                    android:id="@+id/frameLayout"
                    android:layout_width="100dp"
                    android:layout_height="100dp">

                    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/profile_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/iconfinder_man_196742"
                        app:civ_border_color="#FF000000"
                        app:civ_border_width="2dp" />

                    <ImageButton
                        android:id="@+id/select_img_btn"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="bottom|right"
                        android:background="@drawable/ic_plus" />

                </FrameLayout>

                <TextView
                    android:id="@+id/yourName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="100dp"
                    android:layout_marginTop="55dp"
                    android:text="@string/yourName"
                    android:textSize="30dp" />

            </LinearLayout>

            <Button
                android:id="@+id/AddDetailsButton"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_shape01"
                android:text="編輯個人檔案"
                android:textColor="#000000"
                android:textSize="16dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:text="帳戶:"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/yourAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yourAccount"
                    android:textSize="20dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:text="密碼:"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/yourPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yourPassword"
                    android:textSize="20dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:text="身分證字號:"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/yourRealId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yourRealId"
                    android:textSize="20dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:text="電話:"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/yourPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yourPhone"
                    android:textSize="20dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="100dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:text="地址:"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/yourAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yourAddress"
                    android:textSize="20dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="50dp"
                android:gravity="center_horizontal">

                <ImageView
                    android:id="@+id/logout"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_logout" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>