<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfile">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#dedede"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="編輯個人檔案"
        android:textSize="20sp"
        android:id="@+id/edit_profile_title"
        android:layout_centerVertical="true"
        android:textStyle="bold"
        android:textColor="#000000"
        app:layout_constraintTop_toTopOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="@id/toolbar"
        app:layout_constraintLeft_toLeftOf="@id/toolbar"
        app:layout_constraintRight_toRightOf="@id/toolbar"
        android:layout_marginTop="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="取消"
        android:textSize="20sp"
        android:id="@+id/cancelbtn"
        android:layout_centerVertical="true"
        android:textColor="#000000"
        app:layout_constraintTop_toTopOf="@id/edit_profile_title"
        app:layout_constraintLeft_toLeftOf="@id/toolbar"
        android:layout_marginLeft="25dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="完成"
        android:textSize="20sp"
        android:id="@+id/finishbtn"
        android:layout_centerVertical="true"
        android:textColor="#2196F3"
        app:layout_constraintTop_toTopOf="@id/edit_profile_title"
        app:layout_constraintRight_toRightOf="@id/toolbar"
        android:layout_marginRight="25dp"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_above="@+id/realId"
        android:layout_marginBottom="40dp"
        android:background="#11000000"
        android:ems="10"
        android:hint="@string/yourName"
        android:textColorHint="@color/darktxt"
        android:inputType="text"
        android:textColor="@color/darktxt"
        android:textSize="16dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="50dp"/>

    <EditText
        android:id="@+id/realId"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_above="@+id/phone"
        android:layout_marginTop="40dp"
        android:background="#11000000"
        android:ems="10"
        android:hint="@string/yourRealId"
        android:textColorHint="@color/darktxt"
        android:inputType="text"
        android:textColor="@color/darktxt"
        android:textSize="16dp"
        app:layout_constraintTop_toBottomOf="@+id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/phone"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:layout_alignStart="@+id/realId"
        android:layout_alignLeft="@+id/realId"
        android:layout_alignParentBottom="true"
        android:background="#11000000"
        android:textColorHint="@color/darktxt"
        android:ems="10"
        android:hint="@string/yourPhone"
        android:inputType="text"
        android:textColor="@color/darktxt"
        app:layout_constraintTop_toBottomOf="@id/realId"
        app:layout_constraintLeft_toLeftOf="@+id/realId"
        app:layout_constraintStart_toStartOf="@+id/realId" />

    <EditText
        android:id="@+id/address"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:layout_alignStart="@+id/phone"
        android:layout_alignLeft="@+id/phone"
        android:layout_alignParentBottom="true"
        android:background="#11000000"
        android:textColorHint="@color/darktxt"
        android:ems="10"
        android:hint="@string/yourAddress"
        android:inputType="text"
        android:textColor="@color/darktxt"
        app:layout_constraintTop_toBottomOf="@id/phone"
        app:layout_constraintLeft_toLeftOf="@+id/phone"
        app:layout_constraintStart_toStartOf="@+id/phone" />


</androidx.constraintlayout.widget.ConstraintLayout>