<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <TextView
        android:id="@+id/appname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/darkh1"
        android:textSize="30dp"
        android:textStyle="bold"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/creatNewAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/creatNewAccount"
        android:textAlignment="center"
        android:textColor="@color/darkh1"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@id/appname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_above="@+id/email"
        android:layout_marginBottom="40dp"
        android:background="#11000000"
        android:ems="10"
        android:hint="UserName"
        android:textColorHint="@color/darktxt"
        android:inputType="text"
        android:textColor="@color/darktxt"
        android:textSize="16dp"
        app:layout_constraintTop_toBottomOf="@id/creatNewAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="50dp"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_above="@+id/password"
        android:layout_marginTop="40dp"
        android:background="#11000000"
        android:ems="10"
        android:hint="Email"
        android:textColorHint="@color/darktxt"
        android:inputType="textEmailAddress"
        android:textColor="@color/darktxt"
        android:textSize="16dp"
        app:layout_constraintTop_toBottomOf="@+id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:layout_alignStart="@+id/email"
        android:layout_alignLeft="@+id/email"
        android:layout_alignParentBottom="true"
        android:background="#11000000"
        android:textColorHint="@color/darktxt"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:textColor="@color/darktxt"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintLeft_toLeftOf="@+id/email"
        app:layout_constraintStart_toStartOf="@+id/email" />

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="我接受應用程式開發人員合約的條款及條件"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        android:layout_marginTop="25dp"
        />

    <Button
        android:id="@+id/signupbutton"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:background="@drawable/loginbuttonbg"
        android:text="@string/signUp"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/alreadyHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alreadyHaveAccount"
        android:textColor="@color/darkh1"
        app:layout_constraintTop_toBottomOf="@id/signupbutton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"/>

    <ProgressBar
        android:id="@+id/progress_loader"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupbutton" />

</androidx.constraintlayout.widget.ConstraintLayout>